@@ -39,6 +39,7 @@
 - [#984] Issue with up to date list of unique names.
 - Tracking changes/prevent "OK" recalculation after "Apply".
 - Change behavior for menu Pattern piece -> Show main path. Now it has an influence on export as well.
+- Call Piece Options and Delete Piece from the piece list context menu.
 
 # Version 0.6.2 (unreleased)
 - [#903] Bug in tool Cut Spline path.
